# cpp-tdd-exercise

./: .gitignore  CMakeLists.txt
src/: Budget.h  BudgetRepo.h  Calculator.cc  Calculator.h
test/: CalculatorTest.cc  MockTest.cc  StubBudgetRepo.h
